--- a/css/services_subpage_style.css
+++ b/css/services_subpage_style.css
@@ -129,6 +129,9 @@ q {
     user-select: none;
     z-index: 5;
   }
+.ham.active {
+    background: none;
+}
   .hamRotate.active {
     transform: rotate(45deg);
   }
