--- a/css/services_style.css
+++ b/css/services_style.css
@@ -1,10 +1,3 @@
-h1 {
-    color: brown;
-}
-
-.content {
-    display: none;
-  }
 
 /*//////////// IMG /////////////////*/
 .teaser_icon_wrap:hover {
@@ -27,7 +20,19 @@ h1 {
     80% { transform: translate(-1px, -1px) rotate(1deg); }
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
-  } 
+  }
+
+* {
+    box-sizing: border-box;
+}
+
+/*h1 {*/
+/*    color: brown;*/
+/*}*/
+
+.content {
+    display: none;
+}
 
 /* LINKS "A" */
 a {
@@ -41,19 +46,14 @@ a:link {
     text-decoration: none;
     color: #ff0000 ;
 } */
-/* a:visited { 
-    text-decoration: none; 
+/* a:visited {
+    text-decoration: none;
     color: #1575f3;
 } */
 a:hover {
     text-decoration: underline; /* Делает ссылку подчеркнутой при наведении на нее курсора */
     color: black; /* Цвет ссылки */
-   } 
-
-
-html {
-    font-size: 30px;
-}
+   }
 
 body {
     margin: 0;
@@ -72,9 +72,19 @@ h6 {
     margin: 0;
 }
 
+html {
+    font-size: 16px;
+}
+
+html,
+body {
+    /*overflow: hidden;*/
+    height: 100vh;
+}
+
 p {
     margin: 0 0 10px;
-    display: block;
+    display: inline-block;
   }
 
 .container {
@@ -139,7 +149,7 @@ p {
   margin-left: 92%;
   top: -20px;
   padding-top: 1%;
-  color: white;    
+  color: white;
   position: fixed;
   z-index: 2;
 }
@@ -362,45 +372,26 @@ p {
 /* Block_1
 =================*/
 
-.block_1_container {
-    display: flex;
-    flex-direction: column nowrap;
-    width: 100%;
-    height: auto;   
-    padding-top: 20px;
-    padding-bottom: 100px;}
-
-.block_1_container {
-    padding-right: 5%;
-    padding-left: 5%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-top: 5%;
-}
-
 * {
     box-sizing: border-box;
+}
+
+.block_1_row {
+    padding-left: 5%;
+    padding-right: 5%;
+    text-align: center;
 }
 
 .block_1_row::after {
     content: "";
     clear: both;
     display: table;
-    justify-content: space-between;
-    background-color: transparent !important;
 }
 
 .block_1_icon {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
     float: left;
-    width: 25%;
-    margin-top: 0;
-    margin-left: 6%;
-    text-align: center;
-    vertical-align: middle;
-
+    width: 33.33%;
+    padding: 50px;
 }
 
 .box_header {
@@ -526,60 +517,63 @@ p {
 =================*/
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .footer {
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 400px;
-  background: url(../img/img_99.jpg) center;
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: ghostwhite;
-  text-align: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 400px;
+    background: url(../img/img_99.jpg) center;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    /*background-position: center;*/
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: ghostwhite;
+    text-align: center;
 }
 
-.footerRow{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+.footerRow {
+    padding-left: 15%;
+    padding-right: 15%;
+    text-align: center;
+}
+
+.footerRow::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.footerColumn {
+    float: left;
+    width: 33.33%;
+    padding: 50px;
+    padding-top: 10vh;
 }
 
 .footer_icon_wrap {
-  /* display: block; */
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 20px;
-}
-
-.icon1 {
-  padding-top: 20px;
-}
-
-.email-text {
-  color: #666666 !important;
-}
-
-.phoneFoot {
-padding-top: 15px;
-}
-
-/* Create five equal columns that floats next to each other */
-.footerColumn {
-  text-align: center;
-  margin-right: 40px;
-  padding-bottom: 30px;
-  padding-top: 80px;
+    padding-bottom: 20px;
 }
 
 .footerColumn p {
-  color: #666666;
+    color: #666666;
+    font-size: 14pt;
+    font-weight: 400;
+}
+
+.email-text {
+    font-size: 14pt;
+    font-weight: 400;
+    color: #666666 !important;
+}
+
+@supports (-webkit-overflow-scrolling: touch) {
+    .footer {
+        background-attachment: scroll;
+    }
 }
 
 
@@ -612,21 +606,22 @@ padding-top: 15px;
     line-height: 0.3; 
     text-align: center;   
   }
-  .block_1_icon {
-    width: 26%;
-  }
-  .footerColumn  {
-    width: 100%;
-    margin-left: 0px;
-    padding: 0px;
-    padding-bottom: 10px;
-  }
-  .icon1 {
-    padding-top: 30px;
-  }
-  .footer {
-    height: 100%;
-  }
+    .block_1_row {
+        width: 100%;
+        text-align: center;
+        padding: 2%;
+    }
+    .block_1_icon {
+        width: 33.333%;
+    }
+    .footer {
+        height: 100%;
+    }
+    .footerRow {
+        width: 100%;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
   .menu_button{
     margin-left: 93%;
     padding-top: 25px;
@@ -646,21 +641,23 @@ padding-top: 15px;
     line-height: 0.3; 
     text-align: center;   
   }
-  .block_1_icon {
-    width: 40%;
-  }
-  .footerColumn  {
-    width: 100%;
-    margin-left: 0px;
-    padding: 0px;
-    padding-bottom: 10px;
-  }
-  .icon1 {
-    padding-top: 30px;
-  }
-  .footer {
-    height: 100%;
-  }
+    .block_1_row {
+        width: 100%;
+        text-align: center;
+        padding: 2%;
+    }
+    .block_1_icon {
+        width: 33.333%;
+    }
+
+    .footer {
+        height: 100%;
+    }
+    .footerRow {
+        width: 100%;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
   .menu_button{
     margin-left: 93%;
     padding-top: 25px;
@@ -681,21 +678,23 @@ and (max-width: 900px) {
     line-height: 0.3; 
     text-align: center;   
   }
-  .block_1_icon {
-    width: 40%;
-  }
-  .footerColumn  {
-    width: 100%;
-    margin-left: 0px;
-    padding: 0px;
-    padding-bottom: 10px;
-  }
-  .icon1 {
-    padding-top: 50px;
-  }
-  .footer {
-    height: 100%;
-  }
+    .block_1_row {
+        width: 100%;
+        text-align: center;
+        padding: 2%;
+    }
+    .block_1_icon {
+        width: 50%;
+    }
+    .footer {
+        height: 100%;
+    }
+
+    .footerRow {
+        width: 100%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
   .menu_button{
     margin-left: 93%;
     padding-top: 25px;
@@ -715,23 +714,29 @@ and (max-width: 900px) {
     line-height: 0.3; 
     text-align: center;   
   }
+
+  .block_1_row {
+      width: 100%;
+      text-align: center;
+      padding: 2%;
+  }
   .block_1_icon {
-    width: 40%;
+    width: 50%;
   }
-  .footerRow {
-    display: block;
-}
-  .footerColumn  {
-    width: 100%;
-    padding: 0px;
-    padding-bottom: 20px;
-  }
-  .icon1 {
-    padding-top: 50px;
-  }
-  .footer {
-    height: 100%;
-  }
+    .footer {
+        height: 100%;
+    }
+
+    .footerRow {
+        width: 100%;
+        display: block;
+    }
+
+    .footerColumn {
+        width: 100%;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
   .menu_button{
     margin-left: 700px;
     padding-top: 30px;
