--- a/css/index_style.css
+++ b/css/index_style.css
@@ -834,6 +834,7 @@ body {
 .block3ColumnMainText {
     font-size: 16pt;
     font-weight: 600;
+    color: black !important;
 }
 
 .block3Column i:hover {
