--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -490,6 +490,11 @@ img {
     font-weight: 500;
 }
 
+.phoneFoot a {
+    font-size: 14pt;
+    color: #666666;
+}
+
 @supports (-webkit-overflow-scrolling: touch) {
     .footer {
         background-attachment: scroll;
