--- a/css/services_style.css
+++ b/css/services_style.css
@@ -570,6 +570,11 @@ p {
     color: #666666 !important;
 }
 
+.phoneFoot a {
+    font-size: 14pt;
+    color: #666666;
+}
+
 @supports (-webkit-overflow-scrolling: touch) {
     .footer {
         background-attachment: scroll;
