--- a/css/services_subpage_style.css
+++ b/css/services_subpage_style.css
@@ -529,6 +529,11 @@ li {
     font-weight: 500;
 }
 
+.phoneFoot a {
+    font-size: 14pt;
+    color: #666666;
+}
+
 @supports (-webkit-overflow-scrolling: touch) {
     .footer {
         background-attachment: scroll;
