--- a/ContactFrom_v6/css/main.css
+++ b/ContactFrom_v6/css/main.css
@@ -487,7 +487,7 @@ textarea.input100 {
   line-height: 1.5;
 }
 
-.contact100-more-highlight {
+.contact100-more-highlight a {
   color: #ff4b5a;
 }
 
